<resources>
    <string name="app_name">Roma</string>
    <string name="facebook_app_id">175575204230461</string>
    <string name="fb_login_protocol_scheme">fb175575204230461</string>
    <string name="login">Log in</string>
    <string name="start">Get started</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="forgotten">Forgot password?</string>
    <string name="or">OR</string>
    <string name="create">Create new account</string>
    <string name="signup">Sign up with email</string>
    <string name="facebook_signup">Sign in with Facebook</string>
    <string name="google_signup">Sign in with Google</string>
    <string name="already">Already have an account?</string>
    <string name="next">Next</string>
    <string name="createpass">Create a password</string>
    <string name="rem">Enter a combination of at least six characters, including:  numbers, letters and punctuation marks (such as !).</string>
    <string name="email">What\'s your email?</string>
    <string name="password">Password</string>
    <string name="lemail">Email</string>
    <string name="Explore">Explore</string>
    <string name="enter_source_location">Enter source location</string>
    <string name="enter_destination_location">Enter destination location</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restaurants_detail">RestaurantsDetail</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_saved">SavedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_recommended_itinerary">RecommendedItinerary</string>
    <string name="title_activity_avatars">Avatars</string>
</resources>