<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LogIn">

    <EditText
        android:id="@+id/user"
        style="@android:style/Widget.EditText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/montserrat"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#86978E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#86978E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />


    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="@color/secondaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgotten"
        android:textColor="#008C45"
        android:textSize="11sp"
        android:textStyle="bold"
        app:backgroundTint="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="219dp"
        android:layout_marginRight="219dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@mipmap/facebook_icon" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@mipmap/google_icon" />

    <Button
        android:id="@+id/create"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/montserrat"
        android:text="Sign Up"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Login"
        android:textColor="@color/primaryColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="or log in with"
        android:textColor="#86978E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="115dp"
        android:text="Don't have an account?"
        android:textColor="@color/hint_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <ImageButton
        android:id="@+id/show_pass"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="115dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/show_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>